Fix CSS warning (fill-available -> stretch)

--- a/resources/css/custom-layout.css
+++ b/resources/css/custom-layout.css
@@ -8,7 +8,7 @@
 
 .stretch {
     min-height: 100vh;
-    min-height: -webkit-fill-available;
+    min-height: -webkit-stretch;
 }
 
 @media (--on-tablet) {
